configurable etcd endpoint for watcher and removal etcd clientv2 deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ go:
 
 before_install:
   - go get github.com/mattn/goveralls
-  - go get github.com/etcd-io/etcd
+  - go get go.etcd.io/etcd/clientv3
   - cd $HOME/gopath/src/github.com/etcd-io/etcd
   - nohup go run main.go
 
