--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: go
 
 sudo: required
 
+env:
+  - GO111MODULE=on
+
 go:
   - tip
 
@@ -10,10 +13,8 @@ service:
 
 before_install:
   - echo $TRAVIS_GO_VERSION
-  - go get github.com/mattn/goveralls
-  - go get go.etcd.io/etcd/clientv3
   - docker pull quay.io/coreos/etcd:v3.3.10
   - docker run -d -p 2379:2379 quay.io/coreos/etcd:v3.3.10 etcd --name casbin --listen-client-urls http://0.0.0.0:2379 --advertise-client-urls http://0.0.0.0:2379
 
 script:
-  - $HOME/gopath/bin/goveralls -service=travis-ci
+  - make test
