--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [ '1.16', '1.17', '1.18', '1.19', '1.20', '1.21', '1.22', '1.23' ]
+        go-version: [ '1.23' ]
 
     services:
       etcd:
