--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     services:
       etcd:
-        image: quay.io/coreos/etcd
+        image: quay.io/coreos/etcd:v3.5.0
         ports:
           - 2379:2379
           - 2380:2380
